# Chess-Engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
public/icons/: README.md
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/icons/: ICON_GENERATION_GUIDE.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/chess_engine/: analysis.rs  board.rs  error.rs  evaluator.rs  fen.rs  game.rs  mod.rs  move_gen.rs  position.rs  tests.rs  types.rs  validation.rs
src/components/: .gitkeep  MoveHistory.css  MoveHistory.tsx  ThemeToggle.css  ThemeToggle.tsx
src/components/BestMoveHint/: BestMoveHint.css  BestMoveHint.tsx  index.ts
src/components/ChessBoard/: CapturedPieces.css  CapturedPieces.tsx  ChessBoard.css  ChessBoard.tsx  GameStatus.css  GameStatus.tsx  MoveIndicator.css  MoveIndicator.tsx  Piece.css  Piece.tsx  PromotionDialog.css  PromotionDialog.tsx  Square.css  Square.tsx  index.ts
src/components/EvaluationBar/: EvaluationBar.css  EvaluationBar.tsx  index.ts
src/components/EvaluationGraph/: index.ts  (+2 more)
src/contexts/: ThemeContext.tsx
src/hooks/: useBestMove.ts  useGameAnalysis.ts  useMoveAnalysis.ts  usePositionEvaluation.ts
src/pages/: LocalGamePage.css  LocalGamePage.tsx
src/types/: index.ts  tauri.ts  ui.ts
src/utils/: chess.ts  haptics.ts  moveNotation.ts
(+5 files in other folders)
