[package]
name = "chess-engine"
version = "0.1.0"
description = "A cross-platform chess application built with Tauri v2, focused on polished local pass-and-play sessions"
authors = ["Zuhaad Rathore <zuhaad.rathore@example.com>"]
license = "MIT"
repository = "https://github.com/ZuhaadRathore/chess-engine"
homepage = "https://github.com/ZuhaadRathore/chess-engine"
keywords = ["chess", "tauri", "game", "cross-platform"]
categories = ["games"]
edition = "2021"

[lib]
name = "chess_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
once_cell = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.0"

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-haptics = "2.0"
